--- a/package.json
+++ b/package.json
@@ -13,16 +13,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "knex": "^3.0.1",
-    "mysql2": "^3.6.2",
-    "nodemon": "^3.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EHB-MCT/portfolio-starter-AachalShrestha.git"
-  },
-  "bugs": {
-    "url": "https://github.com/EHB-MCT/portfolio-starter-AachalShrestha/issues"
-  },
-  "homepage": "https://github.com/EHB-MCT/portfolio-starter-AachalShrestha#readme"
+    "mongodb": "^6.1.0"
+  }
 }
