--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "les_1_api",
+  "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
