--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,2 +1,30 @@
+version: "3.2"
 
+services:
+
+  api:
+    build: ./images/api
+    ports:
+      - 80:3000
+    environment:
+      POSTGRES_HOST: store
+      POSTGRES_USER: 
+      POSTGRES_PASSWORD: 
+      POSTGRES_DB: 
+    volumes:
+      - ./images/api/src:/usr/app/src
+
+  store: 
+    image: postgres:latest
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: 
+      POSTGRES_PASSWORD: 
+      POSTGRES_DB: 
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
+    volumes:
+      - ./_backup:/var/lib/postgresql/data
+
+      
 
