--- a/images/api/dockerfile
+++ b/images/api/dockerfile
@@ -1,11 +1,11 @@
 FROM node:latest
 
-WORKDIR /urs/app
+WORKDIR /usr/app
 
 COPY package*.json .
 
 RUN npm install --quiet
 
-COPY ./ ./
+COPY ./src ./src
 
 CMD ["npm", "start"]
