--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "npm run migrate && nodemon src/index.js --legacy-watch",
+    "migrate": "npx knex migrate:latest --cwd src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
