--- a/images/api/package.json
+++ b/images/api/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "pg": "8.11.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
