--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,37 @@
 version: "3.2"
 
 services:
-
   api:
     build: ./images/api
     ports:
-      - 80:3000
+      - 3000:3000
     environment:
-      POSTGRES_HOST: store
-      POSTGRES_USER: 
-      POSTGRES_PASSWORD: 
-      POSTGRES_DB: 
+      NODE_ENV:
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
+      POSTGRES_DB:
+      POSTGRES_HOST: db
+      PORT:
     volumes:
       - ./images/api/src:/usr/app/src
+    depends_on:
+      db:
+        condition: service_healthy
 
-  store: 
+  db:
     image: postgres:latest
+    restart: always
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: 
-      POSTGRES_PASSWORD: 
-      POSTGRES_DB: 
-      POSTGRES_HOST_AUTH_METHOD: 'trust'
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
+      POSTGRES_DB:
+      POSTGRES_HOST_AUTH_METHOD:
     volumes:
-      - ./_backup:/var/lib/postgresql/data
-
-      
-
+      - ./_volumes/db/data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
