--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run migrate && nodemon src/index.js --legacy-watch",
-    "migrate": "npx knex migrate:latest --cwd src",
-    "test": "jest --watchAll"
+    "test-watch": "jest --watchAll --detectOpenHandles",
+    "start": "npx knex migrate:latest --cwd src && npm run test && nodemon src/index.js",
+    "dev": "npx knex migrate:latest --cwd src && npm run test-watch",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert-js": "^1.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -29,6 +31,7 @@
   },
   "homepage": "https://github.com/EHB-MCT/portfolio-starter-AachalShrestha#readme",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
