--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test-watch": "jest --watchAll --detectOpenHandles",
-    "start": "npx knex migrate:latest --cwd src && npm run test && nodemon src/index.js",
-    "dev": "npx knex migrate:latest --cwd src && npm run test-watch",
-    "test": "jest --detectOpenHandles"
+    "test-watch": "jest --watch --detectOpenHandles",
+    "prep": " npx knex migrate:latest --cwd ./src",
+    "dev": " npm run prep && npm run test-watch",
+    "start": " npm run prep && nodemon src/index.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "nm": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
