TEST: error fixed in dockerfile

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,6 +8,10 @@ services:
       POSTGRES_HOST: db
       NODE_ENV:
       PORT:
+      
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+      POSTGRES_DB: test
     volumes:
       - ./images/api/src:/usr/app/src
     tty: true
