--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,7 +21,7 @@ services:
         condition: service_healthy
 
   db:
-    image: postgres:latest
+    image: postgres:16.0
     restart: always
     ports:
       - 5432:5432
