--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    image: crshlab/cicdgroepa2023:latest
+    image: crshlab/api:latest
     ports:
       - 8080:3000
     environment: 
