--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.2"
 services:
   api:
     build: ./images/api
+    image: crshlab/api:latest
     ports:
       - 3000:3000
     environment:
