--- a/.github/workflows/testBuildPush.yml
+++ b/.github/workflows/testBuildPush.yml
@@ -15,12 +15,9 @@ jobs:
 
       - name: Set up Docker Compose for Testing
         run: docker-compose -f docker-compose.test.yml build
-        
-      - name: Run Database Migrations
-        run: docker-compose -f docker-compose.test.yml run api npm run prep
 
       - name: Run Tests
-        run: docker-compose -f docker-compose.test.yml run api npm run test
+        run: docker-compose -f docker-compose.test.yml run api npm run prep && npm run test
 
       - name: Set up Docker Compose for Production
         run: docker-compose -f docker-compose.production.yml build
