--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # .env.template
 
 # PostgreSQL Configuration
-POSTGRES_PASSWORD=your_password
-POSTGRES_USER=your_username
-POSTGRES_DB=your_database_name
+POSTGRES_PASSWORD=example
+POSTGRES_USER=example
+POSTGRES_DB=test
 POSTGRES_HOST_AUTH_METHOD=trust
